tests/ui/impl-trait/extra-item.stderr
error[E0407]: method `extra` is not a member of trait `extra_item::MyTrait`
  --> $DIR/extra-item.rs:7:5
   |
LL |     fn extra() {}
   |     ^^^^^^^^^^^^^ not a member of trait `extra_item::MyTrait`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0407`.
